[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-daft-workflow"
version = "0.1.0"
description = "Test Daft workflow for Eventual"
authors = [
    {name = "Oliver", email = "oliver@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
